--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,52 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+body{
+    background-color: #2f363e;
+    color: #fff;
+    padding: 3%;
+}
+.logo{
+    font-size: 25px;
+}
+.logo span{
+    color: orangered;
+}
+
+
+header{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+nav ul{
+    display: flex;
+    list-style: none;
+    gap: 40px;
+}
+
+nav ul li a{
+    color: whitesmoke;
+    font-size: 20px;
+    font-weight: 500;
+    text-decoration: none;
+}
+nav ul li{
+    background-color: black;
+    padding: 10px;
+    border-radius: 10px;
+    border: 0;
+    outline: 0;
+}
+nav ul li:hover{
+    background-color: orangered;
+    color: black;
+}
+.mg-btm{
+    margin-bottom: 20px;
+}
+
