--- a/src/styles.css
+++ b/src/styles.css
@@ -46,7 +46,27 @@ nav ul li:hover{
     background-color: orangered;
     color: black;
 }
-.mg-btm{
-    margin-bottom: 20px;
+
+
+@media only screen and (max-width:650px)  {
+    .logo{
+        font-size: 18px;
+    } 
+    nav ul li a{
+        font-size: 15px;
+    }
+    nav ul{
+        gap: 20px;
+    }
+    h2{
+        font-size: 20px;
+    }
+    .departs{
+        display: block;
+    }
+
 }
 
+@media only screen and (max-width:350px){
+    
+}
