--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<h2>List of Departments in Pearl's Company</h2>
+<h2>Departments in Pearl's Company</h2>
 
 <div class="departs">
     <a *ngFor="let department of departments" class="" (click)="navigate(department)"
