--- a/src/styles.css
+++ b/src/styles.css
@@ -49,14 +49,23 @@ nav ul li:hover{
 
 
 @media only screen and (max-width:650px)  {
+    body{
+        padding: 5%;
+    }
     .logo{
         font-size: 18px;
     } 
+    header{
+        gap: 10px;
+    }
     nav ul li a{
         font-size: 15px;
     }
+    nav ul li{
+        padding: 7px;
+    }
     nav ul{
-        gap: 20px;
+        gap: 15px;
     }
     h2{
         font-size: 20px;
@@ -67,6 +76,4 @@ nav ul li:hover{
 
 }
 
-@media only screen and (max-width:350px){
-    
-}
+
